# IN2354

./: .gitignore
IN2354Exercise2/exercise_2/: Exercise_2.vcxproj  ImplicitSurface.h  MarchingCubes.h  main.cpp
IN2354Exercise3/exercise_3/: CMakeLists.txt  Exercise_3.vcxproj  Exercise_3.vcxproj.filters  ICPOptimizer.h  ProcrustesAligner.h  linux_installation.txt  main.cpp
IN2354Exercise3/exercise_3/results/: bunny_icp.off  bunny_procrustes.off
IN2354Exercise4/exercise_4/: CMakeLists.txt  Exercise 4.sln  Exercise 4.vcxproj  Exercise 4.vcxproj.filters  World.h  main.cpp
